# mcp-hr-work

./: .gitignore  LICENSE  Makefile  README.md  main.py  mcp_tools.py  pyproject.toml  requirements.txt
client/: mcp-streamlit-client.py  mcp_client.py
hr_server/: Makefile  llm.py  main.py  mcp_server.py  mcp_tools.py
research/: trials.ipynb
server/: mcp_server.py  mcp_tools.py
src/: prompts.yaml
